# sewald

./: CMakeLists.txt  LICENSE  README.md
include/: ewald.h  sewald.h  types.h
